[gd_scene load_steps=7 format=3 uid="uid://cnle6r8dnibar"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_i6rdj"]
[ext_resource type="Texture2D" uid="uid://cahkt35dol16k" path="res://assets/media/background/menu/mmbg2.jpg" id="2_0e7dw"]
[ext_resource type="Texture2D" uid="uid://cvak2p0r7qyi7" path="res://assets/media/background/menu/mmbg.jpg" id="3_xegy4"]
[ext_resource type="Texture2D" uid="uid://bacr6fyuxwhia" path="res://assets/media/background/menu/mmbg3.jpg" id="4_cfurm"]
[ext_resource type="FontFile" uid="uid://b2iq6y87f18d5" path="res://assets/fonts/Pixeboy-z8XGD.ttf" id="4_mfbfa"]
[ext_resource type="AudioStream" uid="uid://cw876uc5fbrpi" path="res://assets/audio/mmm2.mp3" id="5_4d2gc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6rdj")

[node name="bg" type="Sprite2D" parent="."]
visible = false
position = Vector2(960.5, 541.169)
scale = Vector2(0.360229, 0.351312)
texture = ExtResource("2_0e7dw")

[node name="bg2" type="Sprite2D" parent="."]
visible = false
position = Vector2(946.122, 541.397)
scale = Vector2(2.75932, 3.37557)
texture = ExtResource("3_xegy4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1045, 756)
scale = Vector2(3.09234, 1.7691)
texture = ExtResource("4_cfurm")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -617.5
offset_top = -336.0
offset_right = 617.5
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = -10
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 256
text = "PROGETTO_
_MONTAGNA"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Bottoni" type="VBoxContainer" parent="VBoxContainer2/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="StartButton" type="Button" parent="VBoxContainer2/CenterContainer/HBoxContainer/Bottoni"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/ControlButton")
focus_neighbor_top = NodePath("../LevelButton")
focus_neighbor_right = NodePath("../../VBoxContainer/ControlButton")
focus_neighbor_bottom = NodePath("../LevelButton")
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 128
text = " QUICK START "

[node name="LevelButton" type="Button" parent="VBoxContainer2/CenterContainer/HBoxContainer/Bottoni"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../VBoxContainer/QuitButton")
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_right = NodePath("../../VBoxContainer/QuitButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 128
text = " LEVELS "

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="ControlButton" type="Button" parent="VBoxContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../Bottoni/StartButton")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../../Bottoni/StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 128
text = "CONTROLS"

[node name="QuitButton" type="Button" parent="VBoxContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../Bottoni/LevelButton")
focus_neighbor_top = NodePath("../ControlButton")
focus_neighbor_right = NodePath("../../Bottoni/LevelButton")
focus_neighbor_bottom = NodePath("../ControlButton")
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 128
text = " QUIT "

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -31.0
offset_right = 356.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = -4
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_mfbfa")
theme_override_font_sizes/font_size = 48
text = "by Pietro Vaccari"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4d2gc")
autoplay = true

[connection signal="pressed" from="VBoxContainer2/CenterContainer/HBoxContainer/Bottoni/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer/HBoxContainer/Bottoni/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer/HBoxContainer/VBoxContainer/ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
